Add migrations and create database

--- a/Forms.Api/appsettings.json
+++ b/Forms.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "FormDbContext": "workstation id=FormsDb.mssql.somee.com;packet size=4096;user id=Kate_SQLLogin_1;pwd=jirycqxels;data source=FormsDb.mssql.somee.com;persist security info=False;initial catalog=FormsDb;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
