--- a/Forms.Application/Forms.Application.csproj
+++ b/Forms.Application/Forms.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Forms.Core\Forms.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SHA3.Net" Version="2.0.0" />
+    </ItemGroup>
+
 </Project>
