--- a/Forms.Application/Forms.Application.csproj
+++ b/Forms.Application/Forms.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
       <PackageReference Include="SHA3.Net" Version="2.0.0" />
     </ItemGroup>
 
